Готовы метрики и статусы